# sarax

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README.md  SUMMARY.md  contributing.md  hardware.md
.github/workflows/: build.yaml  publish_docker_package.yaml  sitl_build.yaml
Docs/: Docker container Installation.md  Docker prerequisites.md  Sarax with Docker.md
Hardware/: README.md
Hardware/Design Data/: Template.config  balloon.xml  datumtarget.xml  dimension.xml  edgesymbol.xml  featureautoname.xml  featurecontrolframe.xml  holetable.xml  id.xml  layers.xml  lighting.xml  mark.xml  objectdefaults.xml  partslist.xml  revisiontable.xml  standard.xml  surfacetexture.xml  transitionsymbol.xml  viewannotation.xml  weld.xml
Hardware/Design Data/AIT/Mold Design/: mold design stop pin.ipt
Hardware/Design Data/Bend Tables/: bend table (in).xlsx  bend table (mm).xlsx
Hardware/Design Data/Cable & Harness/en-US/: harness.iam
Hardware/Design Data/DWG-DXF/: exportdwg.ini
Hardware/Design Data/Design Accelerator/Report/: Main.htm  Reports.ini
Hardware/Design Data/Design Accelerator/Tables/: _TablesMap.xml
Hardware/Design Data/Materials/: InventorMaterialLibrary-chs.xlf  InventorMaterialLibrary-cht.xlf  InventorMaterialLibrary-csy.xlf  InventorMaterialLibrary-deu.xlf  InventorMaterialLibrary-esp.xlf  InventorMaterialLibrary-fra.xlf  InventorMaterialLibrary-ita.xlf  InventorMaterialLibrary-jpn.xlf  InventorMaterialLibrary-kor.xlf  InventorMaterialLibrary-plk.xlf  InventorMaterialLibrary-ptb.xlf  InventorMaterialLibrary-rus.xlf
Hardware/Design Data/Simulation/Report/: Configuration.htm  Simulation.htm
Hardware/Design Data/Tube & Pipe/en-US/: piping runs.iam
Hardware/Design Data/XLS/en-US/: clearance.xlsx  thread.xlsx
Hardware/Design Data/XML/en-US/: finish.xml
Hardware/MRAV Design/: Sam3.dwg  Sarax_Pubic.ipj  Sarax_SAM3.iam
Hardware/MRAV Design/01. CAD/01. 3D_Drawing/: Parameters.xlsx  Parameters.xml  (+1 more)
Hardware/MRAV Design/OldVersions/: Sam3.0002.dwg  Sarax_SAM3.0001.dwg  Sarax_SAM3.0002.iam
Hardware/OldVersions/: Sarax_Quad.ipj.bak
Hardware/Templates/: ANSI (mm).dwg  ANSI (mm).idw  BSI.dwg  BSI.idw  DIN.dwg  DIN.idw  GB.dwg  GB.idw  GOST.dwg  GOST.idw  ISO.dwg  ISO.idw  JIS.dwg  JIS.idw  Mold Design (DIN).iam  Mold Design (mm).iam  Sheet Metal (DIN).ipt  Sheet Metal (mm).ipt  Standard (DIN).iam  Standard (DIN).ipn  Standard (DIN).ipt  Standard (mm).iam  Standard (mm).ipn  Standard (mm).ipt  Weldment (ANSI - mm).iam  Weldment (BSI).iam  Weldment (DIN).iam  Weldment (GB).iam  Weldment (ISO).iam  Weldment (JIS).iam
dependencies/: README.md
docs/: docker-container-installation.md  docker-prerequisites.md  sarax-with-docker.md
scripts/: check_existence.sh  docker_container.sh  install_docker.sh  install_docker_prerequisites.sh  install_sarax_linux.sh  install_sarax_wsl2.sh  menu.py  run.sh
scripts/container/: container_menu.py  docker_entrypoint.sh
src/: interaction_controller.md
src/interaction_controller/: CMakeLists.txt  package.xml
src/interaction_controller/launch/: controller_gui_planner_exp.launch  controller_gui_planner_sitl.launch  elsa_exp.launch  example.launch  iris_sitl.launch  mule_exp.launch  mule_sitl.launch  ns_controller_gui_planner_sitl.launch  peach_exp.launch  peach_gps.launch  sarax_exp.launch  sarax_plus_exp.launch  sarax_plus_sitl.launch  sarax_sitl.launch  traj_generator.launch  vrpn_elsa.launch  vrpn_mule.launch  vrpn_peach.launch  vrpn_sarax.launch  vrpn_sarax_plus.launch  x500_exp.launch
src/interaction_controller/src/: MathHelper.cpp  controller.cpp  controller_node.cpp
src/interaction_controller/voltage_compensation_utilities/: generate_voltage_compensation_model.py  voltage_compensation_comparison.py
src/m4e_gui/: CMakeLists.txt  package.xml  setup.py
src/m4e_gui/launch/: start.launch  start_ns.launch
src/m4e_gui/scripts/: m4e_gui_node.py
src/m4e_manipulator/: .gitignore  README.md
src/m4e_manipulator/m4e_mani_base/: CMakeLists.txt  package.xml  sarax_plus_nuc_gps_tmux.bash  sarax_plus_nuc_optitrack_tmux.bash  start_physical_exp_gps_nuc.sh  start_physical_exp_optitrack_nuc.sh
src/m4e_manipulator/m4e_mani_base/config/: real_m4e_mani_control.yaml  sim_m4e_mani_control.yaml
src/m4e_manipulator/m4e_mani_base/launch/: sarax_plus_exp_gc.launch  sarax_plus_exp_gps_nuc.launch  sarax_plus_exp_optitrack_nuc.launch  sarax_plus_sitl.launch
src/m4e_manipulator/m4e_mani_control/: CMakeLists.txt  package.xml
src/m4e_manipulator/m4e_mani_description/: CMakeLists.txt  package.xml
src/m4e_manipulator/m4e_mani_description/launch/: m4e_mani.rviz  m4e_mani_effort.launch  m4e_mani_effort_rviz.launch  m4e_mani_position.launch  peach_arm.launch
src/m4e_manipulator/m4e_mani_description/meshes/: link1.dae  link1.stl  link2.dae  link2.stl  link3.dae  link3.stl  link4.dae  link4.stl
src/m4e_manipulator/m4e_mani_description/urdf/: m4e_mani.gazebo  m4e_mani.xacro  m4e_mani.xml
src/m4e_manipulator/m4e_mani_gazebo/: CMakeLists.txt  package.xml
src/m4e_manipulator/m4e_mani_gazebo/launch/: m4e_mani_world.launch
src/m4e_manipulator/m4e_mani_gazebo/worlds/: m4e_mani.world
src/m4e_manipulator/m4e_mani_impedance_control/: CMakeLists.txt  package.xml
src/m4e_manipulator/tmotor_ak60_drivers_cpp/: CMakeLists.txt  package.xml
src/m4e_manipulator/tmotor_ak60_drivers_cpp/include/: m4e_ros_controller_node.h  tmotor_ak60_drivers_cpp_node.h
src/m4e_manipulator/tmotor_ak60_drivers_cpp/msg/: MotorCommand.msg  MotorOutput.msg
src/m4e_manipulator/tmotor_ak60_drivers_cpp/src/: m4e_ros_controller_node.cpp  tmotor_ak60_drivers_cpp_node.cpp
src/m4e_manipulator/tmotor_ak60_drivers_cpp/srv/: SetMotorVal.srv  TriggerMotor.srv
src/m4e_mav_trajectory_planner/: .gitignore  CMakeLists.txt  package.xml
src/m4e_mav_trajectory_planner/include/mav_trajectory_generation_example/: example_planner.h  example_planner_node.h
src/m4e_mav_trajectory_planner/launch/: example.launch
src/m4e_mav_trajectory_planner/src/: example_planner.cpp  example_planner_node.cpp
src/m4e_mav_trajectory_planner/srv/: PlanTakeoff.srv
(+1311 files in other folders)
