<?xml version="1.0"?>
<package>
  <name>m4e_gui</name>
  <version>0.1.0</version>
  <description>GUI for M4E project</description>

  <maintainer email="a.alharbat@saxion.nl">Ayham Alharbat</maintainer>
  <maintainer email="ChatGPT@openai.com">ChatGPT</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <build>
      <catkin/>
    </build>
  </export>
</package>
