<?xml version="1.0"?>
<package format="2">
  <name>m4e_mani_base</name>
  <version>0.0.0</version>
  <description>The m4e_mani_base package</description>

  <maintainer email="a.alharbat@saxion.nl">Ayham Alharbat</maintainer>

  <license>BSD</license>

  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>


  <depend>diagnostic_updater</depend>
  <depend>dingo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>rosserial_server</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>m4e_mani_controller</exec_depend>
  <exec_depend>m4e_mani_control</exec_depend>
  <exec_depend>m4e_mani_description</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>



  <export>
  </export>

</package>
